- new landing page!

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="Roat Pkz is the best PvP server, boasting a daily active player count of over 3,000 real players. With a decade of experience, Roat Pkz delivers unique and innovative content, including Wilderness Clue Scrolls, Skilling, Tournaments, Hourly Events, and much more.">
-<meta name="keywords" content="roat pkz, pking server, pk server, spawn server, master server, oldschool spawn server, server">
-<title>Roat Pkz - The #1 PvP Server</title>
+<meta name="description" content="hadowScape is the best PvP, PvM & Skilling server, ShadowScape delivers unique and innovative content, including Custom Bosses, Skilling, Tournaments, Hourly Events, and much more.">
+<meta name="keywords" content="shadowscape, pking server, pk server, spawn server, master server, oldschool spawn server, server">
+<title>ShadowScape - The #1 semi-custom 317 Server</title>
 <link rel="stylesheet" href="data/css/bootstrapf9e3.css?v=1.1">
 <link rel="stylesheet" href="data/css/mainf9e3.css?v=1.1">
 <script src="../ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -151,7 +151,7 @@ Join Them
 <span class="title-txt">Prepare for an</span>
 <h1>ADVENTURE</h1>
 </div>
-<p>Join the most active Wilderness in the scene, we are a community<br>driven server that strives to create the most enjoyable experience for you!</p>
+<p>Join the most Unique 317 server on the scene, we are a community<br>driven server that strives to create the most enjoyable experience for you!</p>
 <div class="holder-button">
 <a href="download/index.html" class="btn-bg btn" role="button">Play Now</a>
 </div>
