--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <div class="drop">
 <ul id="nav">
 <li class="active">
-<a href="index.html">Home</a>
+    <a href="index.html">Home</a>
+
 </li>
 <li>
 <a href="https://shadowps.forumotion.com/">Forum</a>
@@ -130,7 +131,7 @@
 <p>-</p>
 </div>
 <div class="holder-link">
-<a href="https://forum.roatpkz.com/index.php?/topic/31265-voidwaker-korasi-webweaver-ursine-new-daily-weekly-hiscores-more/" class="ellipse-bg">Read More</a>
+<a href="https://shadowps.forumotion.com/" class="ellipse-bg">Read More</a>
 </div>
 </div>
 </article><article>
@@ -145,12 +146,12 @@
     <p>-</p>
 </div>
 <div class="holder-link">
-<a href="https://forum.roatpkz.com/index.php?/topic/29559-4k-skilling-competition-hunter-herblore-runecrafting-farming-released/" class="ellipse-bg">Read More</a>
+<a href="https://shadowps.forumotion.com/" class="ellipse-bg">Read More</a>
 </div>
 </div>
 </article>
 </div>
-<a class="btn btn-news btn-primary rounded-0" href="https://forum.roatpkz.com/index.php?/forum/79-in-game-updates/" role="button">Read More News</a>
+<a class="btn btn-news btn-primary rounded-0" href="https://shadowps.forumotion.com/" role="button">Read More News</a>
 </div>
 </div>
 <div class="col-12 col-sm-10 col-lg-4">
@@ -188,13 +189,13 @@
 <div class="media-spotlight bg-color">
 <ul class="sotial">
 <li>
-<a href="https://facebook.com/RoatPkz/" target="_blank"> <i class="icon-facebook"></i>Facebook</a>
+<a href="" target="_blank"> <i class="icon-facebook"></i>Facebook</a>
 </li>
 <li>
-<a href="https://twitter.com/RoatPkz/" target="_blank"> <i class="icon-twitter"></i>Twitter</a>
+<a href="" target="_blank"> <i class="icon-twitter"></i>Twitter</a>
 </li>
 <li>
-<a href="https://youtube.com/RoatPkz/" target="_blank"><i class="icon-yuotube"></i>Youtube</a>
+<a href="" target="_blank"><i class="icon-yuotube"></i>Youtube</a>
 </li>
 </ul>
 </div>
@@ -208,9 +209,9 @@
 </div>
 <div class="media-spotlight bg-color">
 <ul class="quick-liks">
-<li><a href="landing/index.html"><i class="icon-right"></i>Media</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/"><i class="icon-right"></i>Rules</a></li>
- <li><a target="_blank" href="http://roat-pkz.wikia.com/wiki/Roat_Pkz_Wiki/"><i class="icon-right"></i>Wikia</a></li>
+<li><a href="landing/index_Media.html"><i class="icon-right"></i>Media</a></li>
+<li><a href="https://shadowps.forumotion.com/"><i class="icon-right"></i>Rules</a></li>
+ <li><a target="_blank" href="https://shadowps.forumotion.com/"><i class="icon-right"></i>Wikia</a></li>
 <li><a href="support/index.html"><i class="icon-right"></i>Contact Us</a></li>
 <li><a href="accounts/index.html"><i class="icon-right"></i>Account Recovery</a></li>
 <li><a href="support/index.html"><i class="icon-right"></i>Email Support</a></li>
@@ -232,12 +233,12 @@
 <img src="data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
 </a>
 </div>
-<span class="helper-text">Roat Pkz is a community driven and supported server, we rely on the players support to keep it running, you can help the server by <a class="cyan-link" target="_blank" href="vote/index.html">voting</a> or purchasing items from our <a class="cyan-link" target="_blank" href="donate/index.html">shop</a>.</span>
+<span class="helper-text">ShadowScape is a community driven and supported server, we rely on the players support to keep it running, you can help the server by <a class="cyan-link" target="_blank" href="vote/index.html">voting</a> or purchasing items from our <a class="cyan-link" target="_blank" href="donate/index.html">shop</a>.</span>
 </div>
 <div class="col-12 col-sm-10 col-md-10 col-lg-8">
 <div class="list-hover">
 <div class="footer-col">
-<h3>Roat Pkz</h3>
+<h3>ShadowScape</h3>
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
@@ -262,7 +263,7 @@
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="landing/index.html" class="cyan-link">Media</a></li>
+<li><a href="landing/index_Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
@@ -285,7 +286,7 @@
 <div class="row justify-content-center justify-content-md-around justify-content-xl-between">
 <div class="col-12 col-md-5 col-lg-4">
 <ul class="copyright d-flex">
-<li>&copy; 2023 ROAT PKZ</li>
+<li>&copy; 2024 ShadowScape</li>
 <li>All Rights Reserved.</li>
 </ul>
  </div>
