--- a/landing/index_Media.html
+++ b/landing/index_Media.html
@@ -45,9 +45,9 @@
 <a href="#" class="nav-opener"><span></span></a>
 <div class="drop">
 <ul id="nav">
-<li>
-    <a href="index.html">Home</a>
-</li>
+    <li>
+        <a href="../index.html">Home</a>
+    </li>
     <li>
         <a href="https://shadowps.forumotion.com/">Forum</a>
     </li>
@@ -258,7 +258,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="index.html" class="cyan-link">Media</a></li>
+<li><a href="index_Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
