--- a/support/index.html
+++ b/support/index.html
@@ -203,7 +203,7 @@ Join Them
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="../landing/index.html" class="cyan-link">Media</a></li>
+<li><a href="../landing/index_Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
