--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 <div class="drop">
 <ul id="nav">
 <li class="active">
-    <a href="index.html">Home</a>
+    <a href="home.html">Home</a>
 
 </li>
 <li>
@@ -60,7 +60,7 @@
 <a href="hiscore/index.html">Hiscores</a>
 </li>
 <li>
-<a href="download/index.html">Download</a>
+<a href="download/download.html">Download</a>
 </li>
 <li>
 <a href="https://shadowscape.everythingrs.com/services/vote">Vote</a>
@@ -86,7 +86,7 @@
 </div>
 <p>Join the most Unique 317 server on the scene, we are a community<br>driven server that strives to create the most enjoyable experience for you!</p>
 <div class="holder-button">
-<a href="download/index.html" class="btn-bg btn" role="button">Play Now</a>
+<a href="download/download.html" class="btn-bg btn" role="button">Play Now</a>
 </div>
 </div>
 <a href="#information" class="btn-icon anchor-link">Scroll Down For More</a>
@@ -209,7 +209,7 @@
 </div>
 <div class="media-spotlight bg-color">
 <ul class="quick-liks">
-<li><a href="landing/index_Media.html"><i class="icon-right"></i>Media</a></li>
+<li><a href="landing/Media.html"><i class="icon-right"></i>Media</a></li>
 <li><a href="https://shadowps.forumotion.com/"><i class="icon-right"></i>Rules</a></li>
  <li><a target="_blank" href="https://shadowps.forumotion.com/"><i class="icon-right"></i>Wikia</a></li>
 <li><a href="support/index.html"><i class="icon-right"></i>Contact Us</a></li>
@@ -229,8 +229,8 @@
 <div class="row justify-content-center justify-content-lg-between">
 <div class="col-10 col-lg-4 mb-4 mb-xl-0">
 <div class="logo-footer">
-<a href="index.html">
-<img src="data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
+<a href="home.html">
+<img src="data/images/logonew.png" alt="ShadowScape" style="max-width:12rem;">
 </a>
 </div>
 <span class="helper-text">ShadowScape is a community driven and supported server, we rely on the players support to keep it running, you can help the server by <a class="cyan-link" target="_blank" href="vote/index.html">voting</a> or purchasing items from our <a class="cyan-link" target="_blank" href="donate/index.html">shop</a>.</span>
@@ -242,7 +242,7 @@
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
-<li><a href="download/index.html" class="cyan-link">Download</a></li>
+<li><a href="download/download.html" class="cyan-link">Download</a></li>
 <li><a href="donate/index.html" class="cyan-link">Donate</a></li>
 </ul>
 <ul class="helper-links">
@@ -263,7 +263,7 @@
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="landing/index_Media.html" class="cyan-link">Media</a></li>
+<li><a href="landing/Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
