--- a/landing/Media.html
+++ b/landing/Media.html
@@ -46,7 +46,7 @@
 <div class="drop">
 <ul id="nav">
     <li>
-        <a href="../index.html">Home</a>
+        <a href="../home.html">Home</a>
     </li>
     <li>
         <a href="https://shadowps.forumotion.com/">Forum</a>
@@ -86,7 +86,7 @@
 </div>
 <p>If you're already ready to play, please download the client here</p>
 <div class="holder-button">
-<a href="../download/index.html" class="btn-bg btn-bg-2 btn" role="button">PLAY NOW</a>
+<a href="../download/download.html" class="btn-bg btn-bg-2 btn" role="button">PLAY NOW</a>
 </div>
 </div>
 </div>
@@ -111,7 +111,7 @@
 <br>
 <div class="btn-holder">
 <div class="holder-button" style="margin: 0;">
-<a href="../download/index.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
+<a href="../download/download.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
 </div>
 </div>
 </div>
@@ -138,7 +138,7 @@
 <br>
 <div class="btn-holder">
 <div class="holder-button" style="margin: 0;">
-<a href="../download/index.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
+<a href="../download/download.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
 </div>
 </div>
 </div>
@@ -160,7 +160,7 @@
 <br>
 <div class="btn-holder">
 <div class="holder-button" style="margin: 0;">
-<a href="../download/index.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
+<a href="../download/download.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
 </div>
 </div>
 </div>
@@ -186,7 +186,7 @@
 <br>
 <div class="btn-holder">
 <div class="holder-button" style="margin: 0;">
-<a href="../download/index.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
+<a href="../download/download.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
 </div>
 </div>
 </div>
@@ -210,7 +210,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <br>
 <div class="btn-holder">
 <div class="holder-button" style="margin: 0;">
-<a href="../download/index.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
+<a href="../download/download.html" class="btn-bg btn-bg-2 btn" role="button" style="box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .5);">PLAY NOW</a>
 </div>
 </div>
 </div>
@@ -224,7 +224,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <div class="row justify-content-center justify-content-lg-between">
 <div class="col-10 col-lg-4 mb-4 mb-xl-0">
 <div class="logo-footer">
-<a href="../index.html">
+<a href="../home.html">
 <img src="../data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
 </a>
 </div>
@@ -237,7 +237,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
-<li><a href="../download/index.html" class="cyan-link">Download</a></li>
+<li><a href="../download/download.html" class="cyan-link">Download</a></li>
 <li><a href="../donate/index.html" class="cyan-link">Donate</a></li>
 </ul>
 <ul class="helper-links">
@@ -258,7 +258,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="index_Media.html" class="cyan-link">Media</a></li>
+<li><a href="Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
