--- a/termsofservice/index.html
+++ b/termsofservice/index.html
@@ -83,7 +83,7 @@ Join Them
 <div class="drop">
 <ul id="nav">
 <li>
-<a href="../index.html">Home</a>
+<a href="../home.html">Home</a>
 </li>
 <li>
 <a href="https://forum.roatpkz.com/">Forum</a>
@@ -97,7 +97,7 @@ Join Them
 <a href="../hiscore/index.html">Hiscores</a>
 </li>
 <li>
-<a href="../download/index.html">Download</a>
+<a href="../download/download.html">Download</a>
 </li>
 <li>
 <a href="../vote/index.html">Vote</a>
@@ -165,7 +165,7 @@ Join Them
 <p>Effective date: January 1, 2019</p>
 <h2>Roat Pkz Terms of Service</h2>
 <h3>1. Terms</h3>
-<p>By accessing the website at <a href="../index.html">https://roatpkz.com/</a>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
+<p>By accessing the website at <a href="../home.html">https://roatpkz.com/</a>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
 <h3>2. Use License</h3>
 <ol type="a">
 <li>Permission is granted to temporarily download one copy of the materials (information or software) on Roat Pkz's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
@@ -208,7 +208,7 @@ By email: roatpkzhelp@gmail.com</li>
 <div class="row justify-content-center justify-content-lg-between">
 <div class="col-10 col-lg-4 mb-4 mb-xl-0">
 <div class="logo-footer">
-<a href="../index.html">
+<a href="../home.html">
 <img src="../data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
 </a>
 </div>
@@ -221,7 +221,7 @@ By email: roatpkzhelp@gmail.com</li>
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
-<li><a href="../download/index.html" class="cyan-link">Download</a></li>
+<li><a href="../download/download.html" class="cyan-link">Download</a></li>
 <li><a href="../donate/index.html" class="cyan-link">Donate</a></li>
 </ul>
 <ul class="helper-links">
@@ -242,7 +242,7 @@ By email: roatpkzhelp@gmail.com</li>
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="../landing/index_Media.html" class="cyan-link">Media</a></li>
+<li><a href="../landing/Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
