--- a/register/index.html
+++ b/register/index.html
@@ -83,7 +83,7 @@ Join Them
 <div class="drop">
 <ul id="nav">
 <li>
-<a href="../index.html">Home</a>
+<a href="../home.html">Home</a>
 </li>
 <li>
 <a href="https://forum.roatpkz.com/">Forum</a>
@@ -97,7 +97,7 @@ Join Them
 <a href="../hiscore/index.html">Hiscores</a>
 </li>
 <li>
-<a href="../download/index.html">Download</a>
+<a href="../download/download.html">Download</a>
 </li>
 <li>
 <a href="../vote/index.html">Vote</a>
@@ -164,13 +164,13 @@ Join Them
 <h2 class="white" style="color:white;">How to create an account?</h2>
 </div>
 <div style="color:#e8e8e8; letter-spacing: 0.13em; margin-bottom: -20px;">
-<p><b>1.</b> Download Roat Pkz <b><a href="../download/index.html">here</a></b></p>
+<p><b>1.</b> Download Roat Pkz <b><a href="../download/download.html">here</a></b></p>
 <p><b>2.</b> Enter any username & password you desire.</p>
 <p><b>3.</b> If it says "Invalid username or password" that means the username is taken,<br>if not, you just created a new account!</p>
 <br>
 </div>
 <div class="btn-holder d-flex justify-content-between">
-<a href="../download/index.html"><button class="btn btn-primary" style="min-width:380px;">Download Roat Pkz Now!</button></a>
+<a href="../download/download.html"><button class="btn btn-primary" style="min-width:380px;">Download Roat Pkz Now!</button></a>
 </div>
 </div>
 </div>
@@ -181,7 +181,7 @@ Join Them
 <div class="row justify-content-center justify-content-lg-between">
 <div class="col-10 col-lg-4 mb-4 mb-xl-0">
 <div class="logo-footer">
-<a href="../index.html">
+<a href="../home.html">
 <img src="../data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
 </a>
 </div>
@@ -194,7 +194,7 @@ Join Them
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
-<li><a href="../download/index.html" class="cyan-link">Download</a></li>
+<li><a href="../download/download.html" class="cyan-link">Download</a></li>
 <li><a href="../donate/index.html" class="cyan-link">Donate</a></li>
 </ul>
 <ul class="helper-links">
@@ -215,7 +215,7 @@ Join Them
 <ul class="helper-links">
 <li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
 <li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
-<li><a href="../landing/index_Media.html" class="cyan-link">Media</a></li>
+<li><a href="../landing/Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
 </div>
