--- a/download/download.html
+++ b/download/download.html
@@ -111,7 +111,7 @@
                     <a href="https://www.dropbox.com/scl/fi/hb3prxb92blj6cocvi1v0/ShadowLauncher.jar?rlkey=a7q2ruyj7657f74x077c2ikm7&dl=1" style="margin-left:2px; font-size:12px; opacity: 0.9;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-download-fill" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.5a.5.5 0 0 1 1 0V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0zm-.354 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V11h-1v3.293l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z" />
                     </svg>
-                        Roat Pkz.jar - 7KB</a>
+                        ShadowLauncher.jar - 611KB</a>
                 </p>
                 <div class="btn-holder d-flex justify-content-between">
                     <a href="https://www.dropbox.com/scl/fi/hb3prxb92blj6cocvi1v0/ShadowLauncher.jar?rlkey=a7q2ruyj7657f74x077c2ikm7&dl=1" class="btn btn-dark" style="color:white; min-width: 100%; padding:.775rem .3125rem; margin:0px;">
