--- a/download/download.html
+++ b/download/download.html
@@ -5,9 +5,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="Download Roat Pkz on your Windows, Mac, or Linux device with our easy-to-install client. No Java installation is necessary, and our fast download speeds ensure a seamless gaming experience. Video guides are available to assist with the installation process, if needed">
-<meta name="keywords" content="roat pkz, pking server, pk server, spawn server, master server, oldschool spawn server, server">
-<title>Roat Pkz Downloads - The #1 PvP Server</title>
+<meta name="description" content="Download ShadowScape now">
+<meta name="keywords" content="ShadowScape, pking server, pk server, spawn server, master server, oldschool spawn server, server">
+<title>ShadowScape Downloads - The #1 317 Server</title>
 <link rel="stylesheet" href="../data/css/bootstrapf9e3.css?v=1.1">
 <link rel="stylesheet" href="../data/css/mainf9e3.css?v=1.1">
 <script src="../../ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="#">
-                        <img src="../data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
+                        <img src="../data/images/logonew.png" alt="ShadowScape" style="max-width:12rem;">
                     </a>
                 </div>
                 <nav class="menu">
@@ -162,7 +162,7 @@
 <ul class="helper-links">
 <li><a href="../itemlist/index.html" class="cyan-link">Item List</a></li>
 <li><a href="../droptable/index.html" class="cyan-link">Drop Table</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/staff/" class="cyan-link">Staff List</a></li>
+<li><a href="https://discord.com/channels/1071887153623207976/1211888077975584780/1211888077975584780" class="cyan-link">Staff List</a></li>
 </ul>
 <ul class="helper-links">
 <li><a href="https://shadowps.forumotion.com/" class="cyan-link">Guides</a></li>
