--- a/landing/Media.html
+++ b/landing/Media.html
@@ -57,10 +57,10 @@
     <li>
     </li>
     <li>
-        <a href="hiscore/index.html">Hiscores</a>
+        <a href="/hiscore/index.html">Hiscores</a>
     </li>
     <li>
-        <a href="download/index.html">Download</a>
+        <a href="/download/download.html">Download</a>
     </li>
     <li>
         <a href="https://shadowscape.everythingrs.com/services/vote">Vote</a>
@@ -225,18 +225,18 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <div class="col-10 col-lg-4 mb-4 mb-xl-0">
 <div class="logo-footer">
 <a href="../home.html">
-<img src="../data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
+<img src="../data/images/logonew.png" alt="ShadowScape" style="max-width:12rem;">
 </a>
 </div>
-<span class="helper-text">Roat Pkz is a community driven and supported server, we rely on the players support to keep it running, you can help the server by <a class="cyan-link" target="_blank" href="../vote/index.html">voting</a> or purchasing items from our <a class="cyan-link" target="_blank" href="../donate/index.html">shop</a>.</span>
+<span class="helper-text">ShadowScape is a community driven and supported server, we rely on the players support to keep it running, you can help the server by <a class="cyan-link" target="_blank" href="../vote/index.html">voting</a> or purchasing items from our <a class="cyan-link" target="_blank" href="../donate/index.html">shop</a>.</span>
 </div>
 <div class="col-12 col-sm-10 col-md-10 col-lg-8">
 <div class="list-hover">
 <div class="footer-col">
-<h3>Roat Pkz</h3>
+<h3>ShadowScape</h3>
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
-<li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Forum</a></li>
 <li><a href="../download/download.html" class="cyan-link">Download</a></li>
 <li><a href="../donate/index.html" class="cyan-link">Donate</a></li>
 </ul>
@@ -253,11 +253,11 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <ul class="helper-links">
  <li><a href="../itemlist/index.html" class="cyan-link">Item List</a></li>
 <li><a href="../droptable/index.html" class="cyan-link">Drop Table</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/staff/" class="cyan-link">Staff List</a></li>
+<li><a href="https://discord.com/channels/1071887153623207976/1211888077975584780/1211888077975584780" class="cyan-link">Staff List</a></li>
 </ul>
 <ul class="helper-links">
-<li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Guides</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Rules</a></li>
 <li><a href="Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
@@ -268,7 +268,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <ul class="helper-links">
 <li><a href="../support/index.html" class="cyan-link">Email Support</a></li>
 <li><a href="../accounts/index.html" class="cyan-link">Account Recovery</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/forum/72-reports/" class="cyan-link">Report a Problem</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Report a Problem</a></li>
 </ul>
 </div>
 </div>
@@ -281,7 +281,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <div class="row justify-content-center justify-content-md-around justify-content-xl-between">
 <div class="col-12 col-md-5 col-lg-4">
 <ul class="copyright d-flex">
-<li>&copy; 2023 ROAT PKZ</li>
+<li>&copy; 2024 ShadowScape</li>
 <li>All Rights Reserved.</li>
 </ul>
 </div>
