--- a/home.html
+++ b/home.html
@@ -241,7 +241,7 @@
 <h3>ShadowScape</h3>
 <div class="footer-link d-flex justify-content-sm-between">
 <ul class="helper-links">
-<li><a href="https://forum.roatpkz.com/" class="cyan-link">Forum</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Forum</a></li>
 <li><a href="download/download.html" class="cyan-link">Download</a></li>
 <li><a href="donate/index.html" class="cyan-link">Donate</a></li>
 </ul>
@@ -258,11 +258,11 @@
 <ul class="helper-links">
 <li><a href="itemlist/index.html" class="cyan-link">Item List</a></li>
 <li><a href="droptable/index.html" class="cyan-link">Drop Table</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/staff/" class="cyan-link">Staff List</a></li>
+<li><a href="https://discord.com/channels/1071887153623207976/1211888077975584780/1211888077975584780" class="cyan-link">Staff List</a></li>
 </ul>
 <ul class="helper-links">
-<li><a href="https://forum.roatpkz.com/index.php?/forum/17-guides/" class="cyan-link">Guides</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/topic/34-mandatory-official-roat-pkz-in-game-rules/" class="cyan-link">Rules</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Guides</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Rules</a></li>
 <li><a href="landing/Media.html" class="cyan-link">Media</a></li>
 </ul>
 </div>
@@ -273,7 +273,7 @@
 <ul class="helper-links">
 <li><a href="support/index.html" class="cyan-link">Email Support</a></li>
 <li><a href="accounts/index.html" class="cyan-link">Account Recovery</a></li>
-<li><a href="https://forum.roatpkz.com/index.php?/forum/72-reports/" class="cyan-link">Report a Problem</a></li>
+<li><a href="https://shadowps.forumotion.com/" class="cyan-link">Report a Problem</a></li>
 </ul>
 </div>
 </div>
