--- a/support/index.html
+++ b/support/index.html
@@ -96,7 +96,7 @@
                         <h2 class="white" style="color:white;">How to contact Roat Pkz?</h2>
                     </div>
                     <div style="color:#e8e8e8;">
-                        <h3>You can contact us via <a href="https://discord.gg/37vzWZr4zG" target="_blank" style="color:#7289da;">Discord</a> or via <a href="mailto:RoatPkzHelp@gmail.com" style="color:#7289da;">Email</a>.</h3>
+                        <h3>You can contact us via <a href="https://discord.gg/37vzWZr4zG" target="_blank" style="color:#7289da;">Discord</a> or via <a href="mailto:scapeyolo@gmail.com" style="color:#7289da;">Email</a>.</h3>
                     </div>
                 </div>
             </div>
