--- a/support/index.html
+++ b/support/index.html
@@ -127,7 +127,7 @@
                                 <ul class="helper-links">
                                     <li><a href="../hiscore/index.html" class="cyan-link">Hiscore</a></li>
                                     <li><a href="../accounts/index.html" class="cyan-link">Account</a></li>
-                                    <li><a href="../vote/index.html" class="cyan-link">Vote for a Reward</a></li>
+                                    <li><a href="https://shadowscape.everythingrs.com/services/vote" class="cyan-link">Vote for a Reward</a></li>
                                 </ul>
                             </div>
                         </div>
