--- a/landing/Media.html
+++ b/landing/Media.html
@@ -243,7 +243,7 @@ We have the most active PvP scene of any server, we also have a lot of content f
 <ul class="helper-links">
 <li><a href="../hiscore/index.html" class="cyan-link">Hiscore</a></li>
 <li><a href="../accounts/index.html" class="cyan-link">Account</a></li>
-<li><a href="../vote/index.html" class="cyan-link">Vote for a Reward</a></li>
+<li><a href="https://shadowscape.everythingrs.com/services/vote" class="cyan-link">Vote for a Reward</a></li>
 </ul>
 </div>
 </div>
