--- a/support/index.html
+++ b/support/index.html
@@ -109,7 +109,7 @@
                 <div class="col-10 col-lg-4 mb-4 mb-xl-0">
                     <div class="logo-footer">
                         <a href="../home.html">
-                            <img src="../data/images/logonew.png" alt="ROAT PKZ" style="max-width:12rem;">
+                            <img src="../data/images/logonew.png" alt="ShadowScape" style="max-width:12rem;">
                         </a>
                     </div>
                     <span class="helper-text">ShadowScape is a community driven and supported server, we rely on the players support to keep it running, you can help the server by <a class="cyan-link" target="_blank" href="../vote/index.html">voting</a> or purchasing items from our <a class="cyan-link" target="_blank" href="../donate/index.html">shop</a>.</span>
